--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/firebase": "^4.1.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "firebase": "^7.10.0",
     "nuxt": "^2.0.0",
     "vue-slider-component": "^3.1.1"
   },
